--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -2,28 +2,68 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Arial, Helvetica, sans-serif;
 }
 
+/* @import url('https://fonts.googleapis.com/css2?family=Lugrasimo&display=swap'); */
+
+body {
+	font-family: 'Lugrasimo', cursive;
+	font-weight: 400;
+	background: url('../images/blue-2.jpg') repeat;
+	z-index: -1;
+}
+/* body::before{
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
+
+ } */
+ /* @media screen and (min-width:768px) {
+	.content{
+		display: inline-flex;
+	}
+	
+ } */
 .content {
+	font-family: 'Lugrasimo', cursive;
+	font-weight: 400;
 	box-shadow: #333;
-	border-radius: 5px;
-	margin: 2rem;
-	padding: 1rem;
+	color: #fff;
+	border-radius: 10px;
+	border: 1.5px solid #0b2237;
+	margin: 5rem 1.5rem 1rem 1.5rem;
+	padding: 1.5rem;
 	box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
 		5px 5px 15px 5px rgba(0, 0, 0, 0.2);
 	transform: translateY(2px);
 	transition: all 0.3s ease-in-out;
+    backdrop-filter: blur(35px);
+
 }
+
 h3 {
 	line-height: 3rem;
 	margin-left: 2rem;
 }
 
 /* Header section */
+.title-post{
+	display: inline-block;
+	margin-top: 4rem;
+	padding: 0.5rem 2rem;
+	background-color: #0b2237;
+	/* background-color: #41729F; */
+	color: #fff;
+	border-radius: 5px;
+	
+}
 .head {
 	width: 100%;
-	background-color: #333;
+	background-color: #0b2237;
 	color: #fff;
 	text-align: center;
 	justify-content: center;
@@ -54,23 +94,10 @@ a:hover {
 	padding: 10px;
 }
 
-/* Footer section */
-.footer {
-	width: 100%;
-	left: 0;
-	bottom: 0;
-
-	background-color: #333;
-	color: gray;
-	justify-content: center;
-	text-align: center;
-	padding: 20px;
-	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
-}
-
 /* buttons */
+.form {
+	display: inline-block;
+}
 .edit {
 	outline: 0;
 	padding: 8px 20px;
@@ -101,4 +128,19 @@ a:hover {
 	transform: translateY(2px);
 	transition: all 0.3s ease-in-out;
 	opacity: 0.8;
+}
+
+/* Footer section */
+.footer {
+	width: 100%;
+	left: 0;
+	bottom: 0;
+	background-color: #0b2237;
+	color: gray;
+	justify-content: center;
+	text-align: center;
+	padding: 20px;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
 }
