--- a/public/css/form.css
+++ b/public/css/form.css
@@ -27,16 +27,19 @@ p{
 label {
 	font-weight: 700;
 }
-
+input:focus ,textarea:focus{
+	border:1.5px solid #0b2237;
+}
 /* button */
 .btn {
 	outline: 0;
 	color: aliceblue;
-	background: black;
+	background: #0b2237;
 	padding: 8px 20px;
 	border: 1px solid;
-	border-radius: 3px;
+	border-radius: 5px;
 	margin: 40px 5px 10px 10px;
+	font-size: 1rem;
 }
 .btn:hover {
 	opacity: 0.8;
