--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -11,7 +11,7 @@
 		<label for="file">Change Image:
 			<input class="inp-img" type="file" onchange="display()" id="fileImage" name="image" accept="img/*">
 			<div class="imeg">
-				<img  id="pic" src="/images/<%=post.picture %>"  alt="your current Image"></img>
+				<img  id="pic" src="<%=post.picture %>"  alt="your current Image"></img>
 			</div>
 		</label>
 		<button type="submit" class="btn">Update</button>
