--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/Style.css">
 <link rel="stylesheet" href="/css/form.css">
+<link rel="stylesheet" href="/css/fonts/font.css">
+<link rel="stylesheet" href="/css/responsive.css">
+<script src="../js/script.js"></script>
+
 <title>Blog App</title>
 </head>
 <header class="head">
