--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 <h3 class="title-post">RECENT POSTS</h3>
 <main>
-  <ul>
+  <ul class="light">
     
     <% if(post.length >0){ post.forEach((element) => { %>
     <div class="content">
