--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,7 @@
           action="/delete/<%= element.id %>"
           method="POST"
         >
-          <input type="hidden" name="_method" value="DELETE" />
-          <input type="hidden" id="confirmation" name="confirmation" value="" />
-          <button class="delete" id="delete">Delete</button>
+          <button type="submit" class="delete" id="delete">Delete</button>
         </form>
         
         
@@ -56,10 +54,7 @@
     // Prompt user for confirmation
     const confirmation = confirm("Are you sure you want to delete this post?")
 
-    // Set value of hidden input field based on confirmation
-    document.getElementById("confirmation").value = confirmation
-      ? true
-      : false
+  
 
       // Deleting Notification:
 //       setTimeout(()=>{
@@ -77,6 +72,6 @@
 // 	},1000);
 
     // Return true to submit the form if confirmed, false otherwise
-    return confirmation
+    return confirmation;
   }
 </script>
