--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,10 +51,19 @@
     </div>
     <% } %>
   </ul>
+ 
   <div id="update-notif" class="success"></div>
+ 
   <div id="delete-notif" class="remove"></div>
 </main>
 
 <%- include('partials/footer.ejs') %>
 
  
+<script>
+  document.getElementById('update-notif').style.display='block';
+  setTimeout(() => {
+  document.getElementById('update-notif').style.display='none';
+    
+  }, 3000);
+</script>
