--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
     <% } %>
   </ul>
  
-  <div id="update-notif" class="success"></div>
+  <div id="update-notif" class="success"> Post updated successfully</div>
  
   <div id="delete-notif" class="remove"></div>
 </main>
@@ -60,10 +60,10 @@
 <%- include('partials/footer.ejs') %>
 
  
-<script>
+<!-- <script>
   document.getElementById('update-notif').style.display='block';
   setTimeout(() => {
   document.getElementById('update-notif').style.display='none';
     
-  }, 3000);
+  }, 3000); -->
 </script>
