--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -17,6 +17,7 @@
 		</label>
 		<button type="submit" class="btn">Update</button>
 	</form>
+	<!-- <div id="update-notif" class="success"> Post updated successfully</div> -->
 
 </div>
 
@@ -35,6 +36,14 @@
 		reader.readAsDataURL(fileInput.files[0]);
 	  }
 	}
+
+
+  document.getElementById('update-notif').style.display='block';
+  setTimeout(() => {
+  document.getElementById('update-notif').style.display='none';
+    
+  }, 3000); 
+
 
   </script>
 
