--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,15 +10,21 @@
 <link rel="stylesheet" href="/css/responsive.css">
 <script src="../js/script.js"></script>
 
-<title>Blog App</title>
+<title>Book blog</title>
 </head>
 <header class="head">
-    <h1>Afghan Dreams Blog Hub</h1>
-    <nav class="navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/new-post">New Post</a></li>
-        </ul>
-    </nav>
+    <div class="title">
+        <img class="logo" src="./images/images.png" alt="">
+        <h1>Book Blog</h1>
+    </div>
+    <div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/new-post">New Post</a></li>
+            </ul>
+        </nav>
+    </div>
+   
 </header>
 <main>
