--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -10,7 +10,11 @@ body {
 	/* background: url('../images/blue-3.jpg') repeat; */
 	background: linear-gradient(to right, #b1d1eeda, #022d551c);
 }
-
+header{
+	position: fixed;
+	z-index: 1;
+	top: 0;
+}
 .content {
 	font-weight: 400;
 	color: #0b2237;
@@ -38,14 +42,16 @@ h3 {
 	line-height: 3rem;
 	margin-left: 2rem;
 }
+h2{
+	line-height: 3rem;
+}
 
 /* Header section */
 .title-post {
 	display: inline-block;
-	margin-top: 4rem;
+	margin-top: 9rem;
 	padding: 0.5rem 2rem;
 	background-color: #0b2237;
-	/* background-color: #41729F; */
 	color: #fff;
 	border-radius: 5px;
 }
@@ -54,9 +60,8 @@ h3 {
 	width: 100%;
 	background-color: #0b2237;
 	color: #fff;
-	/* text-align: center;
-	justify-content: center; */
 	justify-content: space-between;
+	
 	margin: auto;
 	padding: 15px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -94,6 +99,20 @@ a:hover {
 	align-items: center;
 	display: inline;
 	padding: 10px;
+}
+
+/* New post Form  */
+
+.new-post-form{
+	font-weight: 400;
+	color: #0b2237;
+	border-radius: 10px;
+	border: 1.5px solid #0b2237;
+	margin: 10rem 1.5rem 5rem 1.5rem;
+	padding: 1.5rem;
+	box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
+		5px 5px 15px 5px rgba(0, 0, 0, 0.2);
+	backdrop-filter: blur(20px);
 }
 
 /* buttons */
