--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,8 @@
 
 
 <%- include('partials/header.ejs') %>
-<div class="content">
+
+<div class="new-post-form">
 
 	<form class="new-form" action="/update/<%= post.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 	 
