--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 </head>
 <header class="head">
     <div class="title">
-        <img class="logo" src="./images/images (2).png" alt="">
+        <img class="logo" src="/images/images (2).png" alt="">
         <h1>Book Blog</h1>
     </div>
     <div>
