--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -2,4 +2,11 @@
     img{
 width: 300px;
     }
+    .head h1{
+        font-size: 20px;
+    }
+    .head li{
+        padding: 7px;
+        
+    }
 }
