--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -9,6 +9,7 @@ body {
 	font-weight: 400;
 	/* background: url('../images/blue-3.jpg') repeat; */
 	background: linear-gradient(to right, #b1d1eeda, #022d551c);
+	/* background: rgb(175, 224, 255); */
 }
 header{
 	position: fixed;
@@ -18,6 +19,8 @@ header{
 .content {
 	font-weight: 400;
 	color: #0b2237;
+	/* color: #fff; */
+	/* background: #0b2237; */
 	border-radius: 10px;
 	border: 1.5px solid #0b2237;
 	margin: 1rem 1.5rem 5rem 1.5rem;
