--- a/public/css/form.css
+++ b/public/css/form.css
@@ -18,17 +18,18 @@
 	margin: 5px 0 30px;
 	padding: 10px;
 }
-li{
+li {
 	list-style-type: none;
 }
-p{
+p {
 	line-height: 2rem;
 }
 label {
 	font-weight: 700;
 }
-input:focus ,textarea:focus{
-	border:1.5px solid #0b2237;
+input:focus,
+textarea:focus {
+	border: 1.5px solid #0b2237;
 }
 /* button */
 .btn {
@@ -45,7 +46,8 @@ input:focus ,textarea:focus{
 	opacity: 0.8;
 	cursor: pointer;
 }
-.btn , a{
+.btn,
+a {
 	text-decoration: none;
 }
 /* Image style */
@@ -55,17 +57,15 @@ input:focus ,textarea:focus{
 	align-items: center;
 }
 
-
 img {
-
 	width: 60vh;
 	border-radius: 5px;
-	margin-top: 30px ;
+	margin-top: 30px;
 }
 
 /* notifications */
-.success{
-	/* display: none; */
+.success {
+	display: none;
 	position: fixed;
 	top: 60px;
 	right: 20px;
@@ -75,17 +75,18 @@ img {
 	border: #0b2237 1px solid;
 	border-radius: 5px;
 	animation: slide-in 2s forwards;
+	z-index: 3;
 }
-@keyframes slide-in{
-	0%{
+@keyframes slide-in {
+	0% {
 		transform: translateX(100%);
 	}
-	100%{
+	100% {
 		transform: translateX(0);
 	}
 }
 
-.remove{
+.remove {
 	display: none;
 	position: fixed;
 	top: 60px;
@@ -95,12 +96,13 @@ img {
 	color: white;
 	border-radius: 5px;
 	animation: slide 2s forwards;
+	z-index: 3;
 }
-@keyframes slide{
-	0%{
+@keyframes slide {
+	0% {
 		transform: translateX(100%);
 	}
-	100%{
+	100% {
 		transform: translateX(1);
 	}
 }
