--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,77 +1,71 @@
 <%- include('partials/header.ejs') %>
 <h3 class="title-post">RECENT POSTS</h3>
 <main>
-  <ul>
-    
-    <% if(post.length >0){ post.forEach((element) => { %>
-    <div class="content">
-      <li>
-        <h2><%= element.title %></h2>
-        <p><%= element.description %></p>
-        <div class="imeg">
-          <% if(element.picture){ %>
-          <img src=" <%=element.picture %>" alt="picture" />
-          <% }else{ %>
-          <img src="/images/placeholder.jpg" alt="picture" />
-          <% } %>
-        </div>
-        <div class="content-btn">
-          <form action="/action" method="post">
-            <input type="hidden" name="postId" value="<%= element.id %>" />
-            <button
-              type="submit"
-              name="action"
-              value="edit"
-              class="action_button edit"
-              id="edit_button"
-            >
-              Edit
-            </button>
-            <button
-              type="submit"
-              name="action"
-              value="delete"
-              class="action_button delete"
-              id="delete_button"
-              onclick="return confirm('Are you sure you want to delete this post?');"
-            >
-              Delete
-            </button>
-          </form>
-        </div>
-      </li>
-    </div>
+	<% if(locals.update){ %>
+	<div id="update-notif" class="success"><%= updateMessage %></div>
+	<% }else if(locals.remove){ console.log(remove); %>
+	<div id="delete-notif" class="remove"><%= console.log(removeMessage);  %></div>
+	<% } %>
+	<ul>
+		<% if(post.length >0){ post.forEach((element) => { %>
+		<div class="content">
+			<li>
+				<h2><%= element.title %></h2>
+				<p><%= element.description %></p>
+				<div class="imeg">
+					<% if(element.picture){ %>
+					<img src=" <%=element.picture %>" alt="picture" />
+					<% }else{ %>
+					<img src="/images/placeholder.jpg" alt="picture" />
+					<% } %>
+				</div>
+				<div class="content-btn">
+					<form action="/action" method="post">
+						<input type="hidden" name="postId" value="<%= element.id %>" />
+						<button
+							type="submit"
+							name="action"
+							value="edit"
+							class="action_button edit"
+							id="edit_button">
+							Edit
+						</button>
 
-    <% }); }else{ %>
-    <div class="content">
-      <div class="head">
-        Create
-        <li><a href="/new-post">New Post</a></li>
-      </div>
-    </div>
-    <% } %>
-  </ul>
+						<button
+							type="submit"
+							name="action"
+							value="delete"
+							class="action_button delete"
+							id="delete_button"
+							onclick="return confirm('Are you sure you want to delete this post?');">
+							Delete
+						</button>
+					</form>
+				</div>
+			</li>
+		</div>
 
-<!--   
-	<div id="update-notif" class="success"> Post updated successfully!</div>
- 
-  <div id="delete-notif" class="remove"> Post deleted successfully!</div> -->
+		<% }); }else{ %>
+		<div class="content">
+			<div class="head">
+				Create
+				<li><a href="/new-post">New Post</a></li>
+			</div>
+		</div>
+		<% } %>
+	</ul>
 </main>
 
 <script>
-    document.getElementById('update-notif').style.display='block';
-  setTimeout(() => {
-  document.getElementById('update-notif').style.display='none';
-    
-  }, 3000); 
+	document.getElementById('update-notif').style.display = 'block';
+	setTimeout(() => {
+		document.getElementById('update-notif').style.display = 'none';
+	}, 3000);
 
-  document.getElementById('delete-notif').style.display='block';
-  setTimeout(() => {
-  document.getElementById('delete-notif').style.display='none';
-    
-  }, 3000); 
+	document.getElementById('delete-notif').style.display = 'block';
+	setTimeout(() => {
+		document.getElementById('delete-notif').style.display = 'none';
+	}, 3000);
 </script>
 
 <%- include('partials/footer.ejs') %>
-
- 
