--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -79,9 +79,10 @@ h2{
 .logo {
 	width: 50px;
 	height: 50px;
-	border-radius: 50%;
+	padding: 0;
+	/* border-radius: 50%; */
 	margin-top: 0;
-	margin-right: 15px;
+	/* margin-right: 15px; */
 	
 }
 ul {
