--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 </head>
 <header class="head">
     <div class="title">
-        <img class="logo" src="/public/images/Logo .png" alt="logo">
+        <img class="logo" src="/images/Logo  - Copy.png" alt="logo">
         <h1>Book Blog</h1>
     </div>
     <div>
