--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/Style.css" />
+		<link rel="stylesheet" href="/css/form.css" />
+		<link rel="stylesheet" href="/css/fonts/font.css" />
+		<link rel="stylesheet" href="/css/responsive.css" />
+		<script src="../js/script.js"></script>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/css/Style.css">
-<link rel="stylesheet" href="/css/form.css">
-<link rel="stylesheet" href="/css/fonts/font.css">
-<link rel="stylesheet" href="/css/responsive.css">
-<script src="../js/script.js"></script>
+		<title>Book blog</title>
+	</head>
+	<header class="head">
+		<div class="title">
+			<img class="logo" src="/images/Logo  - Copy.png" alt="logo" />
 
-<title>Book blog</title>
-</head>
-<header class="head">
-    <div class="title">
-        <img class="logo" src="/images/Logo  - Copy.png" alt="logo">
-        <h1>Book Blog</h1>
-    </div>
-    <div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/new-post">New Post</a></li>
-            </ul>
-        </nav>
-    </div>
-   
-</header>
-<main>
+			<h1>Book Blog</h1>
+		</div>
+		<div>
+			<nav>
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/new-post">New Post</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main></main>
+</html>
