--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
 	</head>
 	<header class="head">
 		<div class="title">
-			<img class="logo" src="/images/Logo  - Copy.png" alt="logo" />
+			<img class="logo" src="/images/logo.png" alt="logo" />
 
 			<h1>Book Blog</h1>
 		</div>
